<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/background_stars"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@color/white"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/img_user"
                android:textSize="20sp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/white"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/inter_light"
                android:textColor="@color/white"
                android:text="@string/username" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_location"
                    card_view:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_light"
                    android:textColor="@color/white"
                    android:text="@string/location" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="3dp"
                    android:src="@drawable/ic_repository"
                    card_view:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/white"
                    android:text="@string/repositories" />

                <TextView
                    android:id="@+id/tv_repositories_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_light"
                    android:textColor="@color/white"
                    android:text="@string/repositories_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_follow"
                    card_view:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_semibold"
                    android:textColor="@color/white"
                    android:text="@string/following" />

                <TextView
                    android:id="@+id/tv_following_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_light"
                    android:textColor="@color/white"
                    android:text="@string/following_text" />

                <TextView
                    android:id="@+id/tv_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_light"
                    android:textColor="@color/white"
                    android:text="@string/border" />

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_semibold"
                    android:textColor="@color/white"
                    android:text="@string/followers" />

                <TextView
                    android:id="@+id/tv_followers_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_light"
                    android:textColor="@color/white"
                    android:text="@string/followers_text" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:tabIndicatorColor="@color/white"
            app:tabTextColor="@android:color/white"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_unselected"
        android:layout_gravity="end|bottom"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>